--- a/core/templates/part/exportar_part.html
+++ b/core/templates/part/exportar_part.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="panel-body">
 
-	<form method="post" action="{% url 'gerar_arquivo' %}">
+	<form id="form_gerar_arquivo" method="post" action="{% url 'gerar_arquivo' %}">
 		{% csrf_token %}
 		<div class="row panel">
 			<div class="col-sm-6">
@@ -62,4 +62,48 @@
 		$('span.input-gerar-arquivo input, .formato select ').each(function(t) {
 			$(this).addClass('input-sm form-control')
 		});
-	</script>
+		
+		$(document).ready(function() {
+
+		    // process the form
+		    $('#form_gerar_arquivo').submit(function(event) {
+
+		        // get the form data
+		        // there are many ways to get this data using jQuery (you can use the class or id also)
+		        var form_gerar_arquivo = {
+		            'inicio'              : $('#{{form_gerar_arquivo.inicio.auto_id}}').val(),
+		            'fim'                 : $('#{{form_gerar_arquivo.fim.auto_id}}').val(),
+		            'formato'             : $('#{{form_gerar_arquivo.formato.auto_id}}').val(),		            
+		            'csrfmiddlewaretoken' : $('#form_gerar_arquivo input[name="csrfmiddlewaretoken"]').val()
+		        };
+
+		        // process the form
+		        $.ajax({
+		            type        : 'POST', // define the type of HTTP verb we want to use (POST for our form)
+		            url         : '{% url "gerar_arquivo" %}', // the url where we want to POST
+		            data        : form_gerar_arquivo, // our data object
+		            encode      : true,
+		            statusCode: {
+		            	200: function(data) {
+		            		if (data.indexOf('<html') < 0){
+		            			console.log(data); 
+								var blob = new Blob([data], {type: "text/plain;charset=utf-8"});
+								var data_inicio = $('#{{form_gerar_arquivo.inicio.auto_id}}').val().split('/');
+								var data_fim = $('#{{form_gerar_arquivo.fim.auto_id}}').val().split('/');
+								
+				            	saveAs(blob, data_inicio[2] + "-" +  data_inicio[1] + "-" +  data_inicio[0] + "." + 
+				            				 data_fim[2] + "-" +  data_fim[1] + "-" + data_fim[0] +
+				            					".txt");
+		            		} else {
+		            			alert("Nenhum registro encontrado.");
+		            		}		            		
+			            }	    
+		            }		            
+		        })		           
+
+		        // stop the form from submitting the normal way and refreshing the page
+		        event.preventDefault();
+		    });
+
+		});
+</script>
