--- a/core/templates/part/exportar_part.html
+++ b/core/templates/part/exportar_part.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="panel-body">
 
-	<form id="form_gerar_arquivo" method="post" action="{% url 'gerar_arquivo' %}">
+	<form onsubmit="gerar_arquivo(); return false;" id="form_gerar_arquivo" method="post" action="{% url 'gerar_arquivo' %}">
 		{% csrf_token %}
 		<div class="row panel">
 			<div class="col-sm-6">
@@ -63,13 +63,7 @@
 			$(this).addClass('input-sm form-control')
 		});
 		
-		$(document).ready(function() {
-
-		    // process the form
-		    $('#form_gerar_arquivo').submit(function(event) {
-
-		        // get the form data
-		        // there are many ways to get this data using jQuery (you can use the class or id also)
+		function gerar_arquivo(){
 		        var form_gerar_arquivo = {
 		            'inicio'              : $('#{{form_gerar_arquivo.inicio.auto_id}}').val(),
 		            'fim'                 : $('#{{form_gerar_arquivo.fim.auto_id}}').val(),
@@ -77,16 +71,15 @@
 		            'csrfmiddlewaretoken' : $('#form_gerar_arquivo input[name="csrfmiddlewaretoken"]').val()
 		        };
 
-		        // process the form
 		        $.ajax({
-		            type        : 'POST', // define the type of HTTP verb we want to use (POST for our form)
-		            url         : '{% url "gerar_arquivo" %}', // the url where we want to POST
-		            data        : form_gerar_arquivo, // our data object
+		            type        : 'POST', 
+		            url         : '{% url "gerar_arquivo" %}', 
+		            data        : form_gerar_arquivo, 
 		            encode      : true,
 		            statusCode: {
 		            	200: function(data) {
+		            		console.log(data);
 		            		if (data.indexOf('<html') < 0){
-		            			console.log(data); 
 								var blob = new Blob([data], {type: "text/plain;charset=utf-8"});
 								var data_inicio = $('#{{form_gerar_arquivo.inicio.auto_id}}').val().split('/');
 								var data_fim = $('#{{form_gerar_arquivo.fim.auto_id}}').val().split('/');
@@ -99,11 +92,6 @@
 		            		}		            		
 			            }	    
 		            }		            
-		        })		           
-
-		        // stop the form from submitting the normal way and refreshing the page
-		        event.preventDefault();
-		    });
-
-		});
+		        });		        
+		 }
 </script>
