--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,6 +1,6 @@
 {% extends 'admin/base_site.html' %}
 {% load static %}
-{% block title %}{{ title }}  }}{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block branding %}
 <h1 id="site-name"><a href="{% url 'admin:index' %}">{{ site_header|default:_('Sistema de controle de ponto eletrônico') }}</a></h1>
