Desabilitando autoBOM do FileSaver

--- a/core/templates/part/exportar_part.html
+++ b/core/templates/part/exportar_part.html
@@ -86,7 +86,7 @@
 								
 				            	saveAs(blob, data_inicio[2] + "-" +  data_inicio[1] + "-" +  data_inicio[0] + "." + 
 				            				 data_fim[2] + "-" +  data_fim[1] + "-" + data_fim[0] +
-				            					".txt");
+				            					".txt", true);
 		            		} else {
 		            			alert("Nenhum registro encontrado.");
 		            		}		            		
